<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/image_famous_burger"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_content"
        android:scaleType="centerCrop"
        android:src="#aa000000" />

    <TextView
        android:id="@+id/text_famous_burger_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/button_buy_famouos_burger"
        android:text="@string/text_burger_name"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_buy_famouos_burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_famous_burger"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/text_buy"
        android:textColor="#ffffff"
        android:background="@drawable/shape_buy_button" />

    <TextView
        android:id="@+id/text_vegie_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/text_famous_burger_name"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_vegetarien_text"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/text_vegeterian"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:visibility="invisible" />

</RelativeLayout>